--- a/#src/contacts.html
+++ b/#src/contacts.html
@@ -4,62 +4,64 @@
   <body>
     <div class="wrapper">
       @@include('_header.html',{})
-      <div class="contacts">
-        <div class="contacts__inner">
-          <div class="contacts__breadcrumbs breadcrumbs">
+      <main>
+        <div class="container">
+          <div class="breadcrumbs">
             <div class="breadcrumbs__item">
               <a href="#" class="breadcrumbs__link">Главная</a>
             </div>
             <div class="breadcrumbs__item">Контакты</div>
           </div>
-          <h1 class="contacts__heading">Контакты</h1>
-          <main class="contacts__main">
-            <section class="contacts__item">
-              <h2 class="contacts__item-heading">Офис компании</h2>
-              <div class="company-info">
-                <div class="company-info__inner">
-                  <span class="company-info__phone">8(800)200-06-00</span>
-                  <ul class="company-info__schedule">
-                    <li>Понедельник – пятница: с 07:00 до 15:00</li>
-                    <li>Звонок бесплатный!</li>
-                  </ul>
-                  <ul class="company-info__contacts">
-                    <li>
-                      <span>Telegram:</span>
-                      dskl_bot
-                    </li>
-                    <li>
-                      <span>Skype:</span>
-                      dskl_skype
-                    </li>
-                  </ul>
-                  <div class="company-info__socials socials socials--dark">
-                    <a href="#" class="socials__link">Одноклассники</a>
-                    <a href="#" class="socials__link">Viber</a>
-                    <a href="#" class="socials__link">Whats App</a>
-                    <a href="#" class="socials__link">Telegramm</a>
-                  </div>
-                  <p class="company-info__note">
-                    Ваши заказы, звонки и обращения обрабатываются в рабочее время. Если Вы
-                    обратитесь к нам в иное время - мы свяжемся с Вами на следующий день. Мы
-                    обращаем внимание, в каком часовом поясе Вы находитесь, и не звоним в неудобное
-                    для Вас время.
-                  </p>
-                  <p class="company-info__delivery">
-                    Пункт выдачи в г. Пушкин, ул. Пушкина 107-202, стоимость доставки 300 руб., при
-                    оформлении заказа до 15.00 доставка в день заказа.
-                  </p>
-                  <ul class="company-info__requisites">
-                    <li>ООО «Тату-на-ту»</li>
-                    <li>ОГРН: 1192036006645</li>
-                  </ul>
+          <h1 class="page-heading">Контакты</h1>
+        </div>
+        <div class="contacts-page">
+          <section class="info-board contacts-page__item">
+            <div class="container">
+              <h2 class="contacts-page__item-heading">Офис компании</h2>
+              <div class="info-board__content">
+                <span class="info-board__phone">8(800)200-06-00</span>
+                <ul class="info-board__schedule">
+                  <li>Понедельник – пятница: с 07:00 до 15:00</li>
+                  <li>Звонок бесплатный!</li>
+                </ul>
+                <ul class="info-board__receiving-request">
+                  <li>
+                    <span>Telegram:</span>
+                    <a class="info-board__link" href="#">dskl_bot</a>
+                  </li>
+                  <li>
+                    <span>Skype:</span>
+                    <a class="info-board__link" href="#">dskl_skype</a>
+                  </li>
+                </ul>
+                <div
+                  class="info-board__socials socials socials--dark socials--has-icon socials--icon-20px"
+                >
+                  <a href="#" class="socials__link socials__link--telegram">Telegramm</a>
+                  <a href="#" class="socials__link socials__link--viber">Viber</a>
+                  <a href="#" class="socials__link socials__link--whatsapp">Whats App</a>
                 </div>
+                <p class="info-board__note">
+                  Ваши заказы, звонки и обращения обрабатываются в рабочее время. Если Вы обратитесь
+                  к нам в иное время - мы свяжемся с Вами на следующий день. Мы обращаем внимание, в
+                  каком часовом поясе Вы находитесь, и не звоним в неудобное для Вас время.
+                </p>
+                <p class="info-board__delivery">
+                  Пункт выдачи в г. Пушкин, ул. Пушкина 107-202, стоимость доставки 300 руб., при
+                  оформлении заказа до 15.00 доставка в день заказа.
+                </p>
+                <ul class="info-board__requisites">
+                  <li>ООО «Тату-на-ту»</li>
+                  <li>ОГРН: 1192036006645</li>
+                </ul>
               </div>
-            </section>
-            <section class="contacts__item">
-              <h2 class="contacts__item-heading">Менеджеры</h2>
-              <div class="contacts__workers-grid">
-                <div class="worker-card">
+            </div>
+          </section>
+          <section class="our-managers contacts-page__item">
+            <div class="container">
+              <h2 class="contacts-page__item-heading">Менеджеры</h2>
+              <ul class="our-managers__list">
+                <li class="worker-card">
                   <div class="worker-card__inner">
                     <div class="worker-card__photo">
                       <picture>
@@ -72,9 +74,10 @@
                         />
                       </picture>
                     </div>
-                    <div class="worker-card__name">Валерия Михайловна</div>
-                    <!-- <div class="worker-card__position"></div>-->
-                    <span class="worker-card__status worker-card__status--online">В сети</span>
+                    <div class="worker-card__main-info">
+                      <span class="worker-card__name">Валерия Михайловна</span>
+                      <span class="worker-card__status worker-card__status--online">В сети</span>
+                    </div>
                     <div class="worker-card__contacts contacts-info contacts-info--dark">
                       <div class="contacts-info__item">
                         <a
@@ -101,8 +104,8 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="worker-card">
+                </li>
+                <li class="worker-card">
                   <div class="worker-card__inner">
                     <div class="worker-card__photo">
                       <picture>
@@ -115,9 +118,12 @@
                         />
                       </picture>
                     </div>
-                    <div class="worker-card__name">Агриппина Дормидонтовна Третья</div>
-                    <!-- <div class="worker-card__position"></div> -->
-                    <span class="worker-card__status worker-card__status--offline">Не в сети</span>
+                    <div class="worker-card__main-info">
+                      <span class="worker-card__name">Агриппина Дормидонтовна</span>
+                      <span class="worker-card__status worker-card__status--offline">
+                        Не в сети
+                      </span>
+                    </div>
                     <div class="worker-card__contacts contacts-info contacts-info--dark">
                       <div class="contacts-info__item">
                         <a
@@ -144,8 +150,8 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="worker-card">
+                </li>
+                <li class="worker-card">
                   <div class="worker-card__inner">
                     <div class="worker-card__photo">
                       <picture>
@@ -158,9 +164,10 @@
                         />
                       </picture>
                     </div>
-                    <div class="worker-card__name">Валерия Михайловна</div>
-                    <!-- <div class="worker-card__position"></div>-->
-                    <span class="worker-card__status worker-card__status--online">В сети</span>
+                    <div class="worker-card__main-info">
+                      <span class="worker-card__name">Валерия Михайловна</span>
+                      <span class="worker-card__status worker-card__status--online">В сети</span>
+                    </div>
                     <div class="worker-card__contacts contacts-info contacts-info--dark">
                       <div class="contacts-info__item">
                         <a
@@ -187,8 +194,8 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="worker-card">
+                </li>
+                <li class="worker-card">
                   <div class="worker-card__inner">
                     <div class="worker-card__photo">
                       <picture>
@@ -201,9 +208,12 @@
                         />
                       </picture>
                     </div>
-                    <div class="worker-card__name">Валерия Михайловна</div>
-                    <!-- <div class="worker-card__position"></div> -->
-                    <span class="worker-card__status worker-card__status--offline">Не в сети</span>
+                    <div class="worker-card__main-info">
+                      <span class="worker-card__name">Валерия Михайловна</span>
+                      <span class="worker-card__status worker-card__status--offline">
+                        Не в сети
+                      </span>
+                    </div>
                     <div class="worker-card__contacts contacts-info contacts-info--dark">
                       <div class="contacts-info__item">
                         <a
@@ -230,19 +240,20 @@
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>
-            </section>
-            <section class="contacts__item">
-              <h2 class="contacts__item-heading">Схема проезда</h2>
-              <div class="contacts__map">
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A79a35f50364891812c7513be8c45f175ccbc185a94e36f7a85fad16925c736e5&amp;source=constructor" width="100%" height="400" frameborder="0" title="Наш магазин на карте" allowfullscreen="true"></iframe>
-              </div>
-          </main>
+                </li>
+              </ul>
+            </div>
+          </section>
+          <section class="map-section contacts-page__item">
+            <h2 class="vis-hid">Схема проезда</h2>
+            <div id="map" class="map-section__map"></div>
+          </section>
         </div>
-      </div>
+      </main>
       @@include('_footer.html',{})
     </div>
     @@include('_popup.html',{}) @@include('_js.html',{})
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=a8b1e0a4-8e0e-4405-bf28-f0cff0ba8683&lang=ru_RU"></script>
+    <script src="js/contacts-page.min.js"></script>
   </body>
 </html>
