--- a/#src/cart.html
+++ b/#src/cart.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('_head.html',{ "title":"Cart" })
+  @@include('_head.html',{ "title":"Корзина" })
   <body>
     <div class="wrapper">
       @@include('_header.html',{})
