--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('_head.html',{ "title":"Catalog" })
+  @@include('_head.html',{ "title":"Каталог" })
   <body>
     <div class="wrapper">
       @@include('_header.html',{})
