--- a/#src/contacts.html
+++ b/#src/contacts.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('_head.html',{ "title":"Contacts" })
+  @@include('_head.html',{ "title":"Контакты" })
   <body>
     <div class="wrapper">
       @@include('_header.html',{})
