--- a/#src/index.html
+++ b/#src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('_head.html',{ "title":"Home" })
+  @@include('_head.html',{ "title":"Mr. Driskell: Тату портал" })
   <body>
     <div class="wrapper">
       @@include('_header.html',{})
