--- a/tattoo-shop/catalog.html
+++ b/tattoo-shop/catalog.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-  <title>Catalog</title>
+  <title>Каталог</title>
   <meta charset="UTF-8" />
   <meta name="format-detection" content="telephone=no" />
   <link rel="stylesheet" href="css/style.min.css" />
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" href="img/icons/favicon/180X180.png" />
+  <link rel="manifest" href="manifest.json" />
   <!-- <meta name="robots" content="noindex, nofollow"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
