fix markup for validate

--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -425,7 +425,7 @@
       </main>
       @@include('_footer.html',{})
     </div>
-    @@include('_popup.html',{}) @@include('_js.html',{})
+    @@include('_js.html',{})
     <script src="js/catalog-page.min.js"></script>
   </body>
 </html>
