--- a/#src/contacts.html
+++ b/#src/contacts.html
@@ -252,7 +252,7 @@
       </main>
       @@include('_footer.html',{})
     </div>
-    @@include('_popup.html',{}) @@include('_js.html',{})
+    @@include('_js.html',{})
     <script src="https://api-maps.yandex.ru/2.1/?apikey=a8b1e0a4-8e0e-4405-bf28-f0cff0ba8683&lang=ru_RU"></script>
     <script src="js/contacts-page.min.js"></script>
   </body>
