--- a/#src/index.html
+++ b/#src/index.html
@@ -1240,7 +1240,7 @@
       </main>
       @@include('_footer.html',{})
     </div>
-    @@include('_popup.html',{}) @@include('_js.html',{})
+    @@include('_js.html',{})
     <script src="js/home-page.min.js"></script>
   </body>
 </html>
