--- a/#src/product.html
+++ b/#src/product.html
@@ -1124,7 +1124,7 @@
       </main>
       @@include('_footer.html',{})
     </div>
-    @@include('_popup.html',{}) @@include('_js.html',{})
+    @@include('_js.html',{})
     <script src="js/product-page.min.js"></script>
   </body>
 </html>
