--- a/#src/404.html
+++ b/#src/404.html
@@ -35,6 +35,6 @@
       </main>
       @@include('_footer.html',{})
     </div>
-    @@include('_popup.html',{}) @@include('_js.html',{})
+    @@include('_js.html',{})
   </body>
 </html>
