--- a/#src/cart.html
+++ b/#src/cart.html
@@ -412,6 +412,6 @@
       </main>
       @@include('_footer.html',{})
     </div>
-    @@include('_popup.html',{}) @@include('_js.html',{})
+    @@include('_js.html',{})
   </body>
 </html>
