fixes for validate markup, add links

--- a/#src/cart.html
+++ b/#src/cart.html
@@ -8,10 +8,10 @@
         <div class="container">
           <div class="breadcrumbs">
             <div class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__link">Главная</a>
+              <a href="/" class="breadcrumbs__link">Главная</a>
             </div>
             <div class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__link">Каталог</a>
+              <a href="/catalog.html" class="breadcrumbs__link">Каталог</a>
             </div>
             <div class="breadcrumbs__item">Корзина</div>
           </div>
