--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -8,10 +8,10 @@
         <div class="container">
           <div class="breadcrumbs">
             <div class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__link">Главная</a>
+              <a href="/" class="breadcrumbs__link">Главная</a>
             </div>
             <div class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__link">Каталог</a>
+              <a href="/catalog.html" class="breadcrumbs__link">Каталог</a>
             </div>
             <div class="breadcrumbs__item">Тату-машинки</div>
           </div>
@@ -215,11 +215,11 @@
                   <div class="products-panel__change-view view-change">
                     <label class="view-change__label">
                       <input class="view-change__input" name="view-change" type="radio" checked />
-                      <div class="view-change__icon view-change__icon--grid"></div>
+                      <span class="view-change__icon view-change__icon--grid"></span>
                     </label>
                     <label class="view-change__label">
                       <input class="view-change__input" name="view-change" type="radio" />
-                      <div class="view-change__icon view-change__icon--list"></div>
+                      <span class="view-change__icon view-change__icon--list"></span>
                     </label>
                   </div>
                 </div>
@@ -227,7 +227,7 @@
                   <div class="catalog__product-card product-card">
                     <div class="product-card__wrapper">
                       <div class="product-card__top">
-                        <a href="##" class="product-card__link">
+                        <a href="/product.html" class="product-card__link">
                           <div class="product-card__image">
                             <picture>
                               <source srcset="img/products/pr-2/skind-2.webp" type="image/webp" />
@@ -235,7 +235,6 @@
                                 alt="Тату-машинка. Артикул: 1"
                                 src="img/products/pr-2/skind-2.jpg"
                                 height="228"
-                                width="auto"
                                 loading="lazy"
                               />
                             </picture>
@@ -252,8 +251,8 @@
                               <div class="tip tip--sale">Распродажа</div>
                             </div>
                           </div>
-                          <button class="product-card__favorites"></button>
                         </a>
+                        <button class="product-card__favorites"></button>
                       </div>
                       <div class="product-card__bottom">
                         <div class="product-card__bottom-inner">
@@ -269,7 +268,7 @@
                   <div class="catalog__product-card product-card">
                     <div class="product-card__wrapper">
                       <div class="product-card__top">
-                        <a href="##" class="product-card__link">
+                        <a href="/product.html" class="product-card__link">
                           <div class="product-card__image">
                             <picture>
                               <source srcset="img/products/pr-2/skind-2.webp" type="image/webp" />
@@ -277,7 +276,6 @@
                                 alt="Тату-машинка. Артикул: 1"
                                 src="img/products/pr-2/skind-2.jpg"
                                 height="228"
-                                width="auto"
                               />
                             </picture>
                           </div>
@@ -291,8 +289,8 @@
                               <div class="tip tip--action">Акция</div>
                             </div>
                           </div>
-                          <button class="product-card__favorites"></button>
                         </a>
+                        <button class="product-card__favorites"></button>
                       </div>
                       <div class="product-card__bottom">
                         <div class="product-card__bottom-inner">
@@ -308,7 +306,7 @@
                   <div class="catalog__product-card product-card">
                     <div class="product-card__wrapper">
                       <div class="product-card__top">
-                        <a href="##" class="product-card__link">
+                        <a href="/product.html" class="product-card__link">
                           <div class="product-card__image">
                             <picture>
                               <source srcset="img/products/pr-2/skind-2.webp" type="image/webp" />
@@ -316,7 +314,6 @@
                                 alt="Тату-машинка. Артикул: 1"
                                 src="img/products/pr-2/skind-2.jpg"
                                 height="228"
-                                width="auto"
                               />
                             </picture>
                           </div>
@@ -333,8 +330,8 @@
                               <div class="tip tip--sale">Распродажа</div>
                             </div>
                           </div>
-                          <button class="product-card__favorites"></button>
                         </a>
+                        <button class="product-card__favorites"></button>
                       </div>
                       <div class="product-card__bottom">
                         <div class="product-card__bottom-inner">
@@ -350,7 +347,7 @@
                   <div class="catalog__product-card product-card">
                     <div class="product-card__wrapper">
                       <div class="product-card__top">
-                        <a href="##" class="product-card__link">
+                        <a href="/product.html" class="product-card__link">
                           <div class="product-card__image">
                             <picture>
                               <source srcset="img/products/pr-2/skind-2.webp" type="image/webp" />
@@ -358,7 +355,6 @@
                                 alt="Тату-машинка. Артикул: 1"
                                 src="img/products/pr-2/skind-2.jpg"
                                 height="228"
-                                width="auto"
                               />
                             </picture>
                           </div>
@@ -375,8 +371,8 @@
                               <div class="tip tip--sale">Распродажа</div>
                             </div>
                           </div>
-                          <button class="product-card__favorites"></button>
                         </a>
+                        <button class="product-card__favorites"></button>
                       </div>
                       <div class="product-card__bottom">
                         <div class="product-card__bottom-inner">
