--- a/#src/contacts.html
+++ b/#src/contacts.html
@@ -8,7 +8,7 @@
         <div class="container">
           <div class="breadcrumbs">
             <div class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__link">Главная</a>
+              <a href="/" class="breadcrumbs__link">Главная</a>
             </div>
             <div class="breadcrumbs__item">Контакты</div>
           </div>
