--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -215,11 +215,11 @@
                   <div class="products-panel__change-view view-change">
                     <label class="view-change__label">
                       <input class="view-change__input" name="view-change" type="radio" checked />
-                      <div class="view-change__icon view-change__icon--grid"></div>
+                      <span class="view-change__icon view-change__icon--grid"></span>
                     </label>
                     <label class="view-change__label">
                       <input class="view-change__input" name="view-change" type="radio" />
-                      <div class="view-change__icon view-change__icon--list"></div>
+                      <span class="view-change__icon view-change__icon--list"></span>
                     </label>
                   </div>
                 </div>
