--- a/src/_head.html
+++ b/src/_head.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="format-detection" content="telephone=no" />
   <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="preload" href="/fonts/Forum.woff2" as="font" type="font/woff2" crossorigin="" />
   <link rel="icon" href="favicon.ico" />
   <link rel="apple-touch-icon" href="img/icons/favicon/180X180.png" />
   <link rel="manifest" href="manifest.json" />
