--- a/src/_header.html
+++ b/src/_header.html
@@ -33,9 +33,9 @@
         </span>
       </button>
       <a class="header__logo logo" href="/">
-        <div class="logo__img">
+        <picture class="logo__img">
           <img src="img/icons/logo.svg" alt="Логотип" />
-        </div>
+        </picture>
       </a>
       <button class="header__search-trigger search-button">
         <span class="vis-hid">Открыть строку поиска</span>
@@ -82,52 +82,8 @@
       <div class="header__catalog catalog-dropdown" data-tabs="menu-tab">
         <div class="catalog-dropdown__content">
           <div class="catalog-dropdown__tabs">
-            <button class="catalog-dropdown__button">По категории</button>
             <button class="catalog-dropdown__button">По брендам</button>
-          </div>
-          <div class="catalog-dropdown__item">
-            <ul class="catalog-dropdown__list">
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Новинки</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Наборы для татуировок</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Тату машинки</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Тату краски</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Тату иглы</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Тату держатели</a>
-              </li>
-            </ul>
-            <ul class="catalog-dropdown__list">
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Тату наконечники</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Блоки питания</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Педали и провода</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Аксессуары</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">Принтеры и планшеты</a>
-              </li>
-              <li class="catalog-dropdown__list-item">
-                <a href="/catalog.html" class="catalog-dropdown__link">
-                  Защита, ёмкости, расходные материалы
-                </a>
-              </li>
-            </ul>
+            <button class="catalog-dropdown__button">По категории</button>
           </div>
           <div class="catalog-dropdown__item">
             <ul class="catalog-dropdown__list">
@@ -303,6 +259,50 @@
               </li>
               <li class="catalog-dropdown__list-item">
                 <a href="/catalog.html" class="catalog-dropdown__link">КРАСКА Tattoo Ink</a>
+              </li>
+            </ul>
+          </div>
+          <div class="catalog-dropdown__item">
+            <ul class="catalog-dropdown__list">
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Новинки</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Наборы для татуировок</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Тату машинки</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Тату краски</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Тату иглы</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Тату держатели</a>
+              </li>
+            </ul>
+            <ul class="catalog-dropdown__list">
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Тату наконечники</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Блоки питания</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Педали и провода</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Аксессуары</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">Принтеры и планшеты</a>
+              </li>
+              <li class="catalog-dropdown__list-item">
+                <a href="/catalog.html" class="catalog-dropdown__link">
+                  Защита, ёмкости, расходные материалы
+                </a>
               </li>
             </ul>
           </div>
