--- a/src/_footer.html
+++ b/src/_footer.html
@@ -2,9 +2,9 @@
   <div class="footer__content">
     <div class="footer__content-inner">
       <a class="footer__logo logo" href="/">
-        <div class="logo__img">
+        <picture class="logo__img">
           <img src="img/icons/logo.svg" alt="Логотип" />
-        </div>
+        </picture>
       </a>
       <div class="footer__nav footer-nav">
         <ul class="footer-nav__list">
