add buttons for filter heads

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -29,6 +29,11 @@
                   <div class="filter__group group-filter">
                     <div class="group-filter__top">
                       <h5 class="group-filter__heading">Цена</h5>
+                      <button
+                        class="group-filter__button"
+                        type="button"
+                        aria-label="Свернуть фильтр"
+                      ></button>
                     </div>
                     <div class="group-filter__bottom">
                       <div class="group-filter__bottom-inner">
@@ -45,6 +50,11 @@
                   <div class="filter__group filter__group--delivery group-filter">
                     <div class="group-filter__top">
                       <h5 class="group-filter__heading">Способ доставки</h5>
+                      <button
+                        class="group-filter__button"
+                        type="button"
+                        aria-label="Свернуть фильтр"
+                      ></button>
                     </div>
                     <div class="group-filter__bottom">
                       <div class="group-filter__bottom-inner">
@@ -73,6 +83,11 @@
                   <div class="filter__group filter__group--brand group-filter">
                     <div class="group-filter__top">
                       <h5 class="group-filter__heading">Брэнд</h5>
+                      <button
+                        class="group-filter__button"
+                        type="button"
+                        aria-label="Свернуть фильтр"
+                      ></button>
                     </div>
                     <div class="group-filter__bottom">
                       <div class="group-filter__bottom-inner">
@@ -121,6 +136,11 @@
                   <div class="filter__group group-filter">
                     <div class="group-filter__top">
                       <h5 class="group-filter__heading">Цвет</h5>
+                      <button
+                        class="group-filter__button"
+                        type="button"
+                        aria-label="Свернуть фильтр"
+                      ></button>
                     </div>
                     <div class="group-filter__bottom">
                       <div class="group-filter__bottom-inner">
