--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
           <h1 class="vis-hid">Интернет-магазин товаров для татуировок</h1>
           <div class="hero__slider swiper">
             <div class="swiper-wrapper">
-              <div class="hero__slide hero__slide--bg-first-screen swiper-slide">
+              <div class="hero__slide hero__slide--bg-second-screen swiper-slide">
                 <div class="hero__inner">
                   <div class="hero__text-block">
                     <h2 class="hero__heading">
@@ -28,13 +28,32 @@
                   </a>
                 </div>
               </div>
-              <div class="hero__slide hero__slide--bg-second-screen swiper-slide">
+              <div class="hero__slide hero__slide--bg-first-screen swiper-slide">
                 <div class="hero__inner">
                   <div class="hero__text-block">
                     <h2 class="hero__heading">
-                      Лучшие товары
+                      Самые крутые
                       <br />
-                      в мире татуировок
+                      тату-машинки
+                    </h2>
+                    <p class="hero__text">
+                      Оборудование и расходники для самых ярких и качественных работ
+                    </p>
+                  </div>
+                  <a href="#" class="hero__button button button--orange">
+                    Смотреть каталог
+                    <span class="button__corner button__corner--left"></span>
+                    <span class="button__corner button__corner--right"></span>
+                  </a>
+                </div>
+              </div>
+              <div class="hero__slide hero__slide--bg-third-screen swiper-slide">
+                <div class="hero__inner">
+                  <div class="hero__text-block">
+                    <h2 class="hero__heading">
+                      Широкий выбор
+                      <br />
+                      качественных инструментов
                     </h2>
                     <p class="hero__text">
                       Оборудование и расходники для самых ярких и качественных работ
@@ -534,7 +553,7 @@
             <ul class="catalog-grid__list">
               <li class="catalog-grid__list-item catalog-grid__list-item--sets item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Тату наборы</a>
+                  <a href="/catalog.html" class="item-catalog__link">Тату наборы</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -545,7 +564,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--holders item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Держатели</a>
+                  <a href="/catalog.html" class="item-catalog__link">Держатели</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -556,7 +575,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--machines item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Тату машинки</a>
+                  <a href="/catalog.html" class="item-catalog__link">Тату машинки</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -567,7 +586,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--pedals item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Педали и провода</a>
+                  <a href="/catalog.html" class="item-catalog__link">Педали и провода</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -578,7 +597,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--paints item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Краски</a>
+                  <a href="/catalog.html" class="item-catalog__link">Краски</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -589,7 +608,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--power item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Блоки питания</a>
+                  <a href="/catalog.html" class="item-catalog__link">Блоки питания</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -600,7 +619,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--tips item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Наконечники</a>
+                  <a href="/catalog.html" class="item-catalog__link">Наконечники</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -611,7 +630,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--needles item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Иглы</a>
+                  <a href="/catalog.html" class="item-catalog__link">Иглы</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -622,7 +641,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--consumables item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Расходные материалы</a>
+                  <a href="/catalog.html" class="item-catalog__link">Расходные материалы</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -633,7 +652,7 @@
               </li>
               <li class="catalog-grid__list-item catalog-grid__list-item--accessories item-catalog">
                 <h3 class="item-catalog__heading">
-                  <a href="#" class="item-catalog__link">Аксессуары</a>
+                  <a href="/catalog.html" class="item-catalog__link">Аксессуары</a>
                 </h3>
                 <div class="item-catalog__image">
                   <picture>
@@ -647,17 +666,20 @@
         </div>
         <div class="banners main-page__item">
           <h2 class="vis-hid">Акции</h2>
-          <div class="banners__item item-banner item-banner--bg item-banner--bg-v1">
+          <div class="item-banner">
             <div class="item-banner__inner">
               <span class="item-banner__text">Краски Lip Nitn</span>
               <div class="item-banner__link-wrapper">
-                <a href="#" class="item-banner__link">
+                <a
+                  href="/catalog.html"
+                  class="item-banner__link item-banner__link--bg item-banner__link--bg-v1"
+                >
                   <span>Смотреть в каталоге</span>
                 </a>
               </div>
             </div>
           </div>
-          <div class="banners__item item-banner item-banner--bg item-banner--bg-v2">
+          <div class="item-banner">
             <div class="item-banner__inner">
               <span class="item-banner__text">
                 Foxx viper —
@@ -665,7 +687,10 @@
                 хит 2021 года
               </span>
               <div class="item-banner__link-wrapper">
-                <a href="#" class="item-banner__link">
+                <a
+                  href="/catalog.html"
+                  class="item-banner__link item-banner__link--bg item-banner__link--bg-v2"
+                >
                   <span>Смотреть в каталоге</span>
                 </a>
               </div>
@@ -683,6 +708,7 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
+                          <source srcset="img/brands/kurosumi.webp" type="image/webp" />
                           <img src="img/brands/kurosumi.jpg" alt="brand: Kuro Sumi" />
                         </picture>
                       </div>
@@ -692,6 +718,7 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
+                          <source srcset="img/brands/inkjecta.webp" type="image/webp" />
                           <img src="img/brands/inkjecta.jpg" alt="brand: Inkjecta" />
                         </picture>
                       </div>
@@ -701,6 +728,7 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
+                          <source srcset="img/brands/irons.webp" type="image/webp" />
                           <img src="img/brands/irons.jpg" alt="brand: Irons" />
                         </picture>
                       </div>
@@ -710,6 +738,7 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
+                          <source srcset="img/brands/s8t.webp" type="image/webp" />
                           <img src="img/brands/s8t.jpg" alt="brand: S8t" />
                         </picture>
                       </div>
@@ -719,6 +748,7 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
+                          <source srcset="img/brands/spirit.webp" type="image/webp" />
                           <img src="img/brands/spirit.jpg" alt="brand: Spirit" />
                         </picture>
                       </div>
@@ -728,6 +758,7 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
+                          <source srcset="img/brands/hawk.webp" type="image/webp" />
                           <img src="img/brands/hawk.jpg" alt="brand: Hawk" />
                         </picture>
                       </div>
@@ -737,7 +768,8 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
-                          <img src="img/brands/spirit.jpg" alt="brand: Spirit" />
+                          <source srcset="img/brands/moms.webp" type="image/webp" />
+                          <img src="img/brands/moms.jpg" alt="brand: Moms" />
                         </picture>
                       </div>
                     </a>
@@ -746,7 +778,8 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
-                          <img src="img/brands/hawk.jpg" alt="brand: Hawk" />
+                          <source srcset="img/brands/hm.webp" type="image/webp" />
+                          <img src="img/brands/hm.jpg" alt="brand: HM" />
                         </picture>
                       </div>
                     </a>
@@ -755,7 +788,8 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
-                          <img src="img/brands/spirit.jpg" alt="brand: Spirit" />
+                          <source srcset="img/brands/wfti.webp" type="image/webp" />
+                          <img src="img/brands/wfti.jpg" alt="brand: WFTI" />
                         </picture>
                       </div>
                     </a>
@@ -764,7 +798,8 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
-                          <img src="img/brands/hawk.jpg" alt="brand: Hawk" />
+                          <source srcset="img/brands/tattoorevive.webp" type="image/webp" />
+                          <img src="img/brands/tattoorevive.jpg" alt="brand: Tattoo Revive" />
                         </picture>
                       </div>
                     </a>
@@ -773,7 +808,8 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
-                          <img src="img/brands/spirit.jpg" alt="brand: Spirit" />
+                          <source srcset="img/brands/aloe.webp" type="image/webp" />
+                          <img src="img/brands/aloe.jpg" alt="brand: Aloe" />
                         </picture>
                       </div>
                     </a>
@@ -782,7 +818,8 @@
                     <a href="#" class="brands-item__link">
                       <div class="brands-item__image">
                         <picture>
-                          <img src="img/brands/hawk.jpg" alt="brand: Hawk" />
+                          <source srcset="img/brands/hanafy.webp" type="image/webp" />
+                          <img src="img/brands/hanafy.jpg" alt="brand: Hanafy" />
                         </picture>
                       </div>
                     </a>
@@ -837,10 +874,9 @@
                     </div>
                     <blockquote class="card-feedback__text">
                       <p>
-                        Далеко-далеко за словесными горами в стране гласных и согласных живут,
-                        рыбные тексты. Правилами несколько ведущими, маленький буквенных ipsum
-                        составитель по всей живет пор. Меня дал, даже lorem своих жизни сих имеет
-                        подпоясал сбить единственное несколько.
+                        Сегодня был у вас в магазине очень всё понравилось! Всё доступно и внятно
+                        объяснили) все вежливые и приветливые) большой выбор всего и тату красок и
+                        тату машинок! Спасибо!!!
                       </p>
                     </blockquote>
                   </div>
@@ -854,11 +890,11 @@
                     </div>
                     <blockquote class="card-feedback__text">
                       <p>
-                        Далеко-далеко за словесными, горами в стране гласных и согласных живут
-                        рыбные тексты. Дорогу, рекламных проектах! Обеспечивает буквенных, над мир
-                        составитель вершину вопроса злых ручеек реторический рыбными подзаголовок
-                        переулка образ текстов рыбного всемогущая вопрос выйти бросил на берегу
-                        lorem? Запятых, от всех.
+                        Все пришло так, как и заказывал. Очень хороший сервис, удобный сайт,
+                        операторы всегда подскажут, если что-то не понятно. Весь товар аккуратно
+                        упакован(все лежит в отдельных зип-локах, пигмент упаковали в защитных
+                        плёнку с пупырками). Очень доволен, вышел отличный подарок для девушки!
+                        Спасибо огромное, продолжайте в том же духе!
                       </p>
                     </blockquote>
                   </div>
@@ -872,10 +908,9 @@
                     </div>
                     <blockquote class="card-feedback__text">
                       <p>
-                        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные
-                        тексты. На берегу образ своих над коварных даже, толку повстречался lorem
-                        своего это предупредила диких которое даль правилами, послушавшись инициал
-                        то деревни выйти несколько заголовок мир залетают ты свой.
+                        Хороший магазин) Но отдельное спасибо хочется сказать менеджеру, который не
+                        предупредил, что через 3 дня после принятия моего заказа, будут скидки в 20%
+                        ) Ну может быть сам не знал) В остальном все отлично)
                       </p>
                     </blockquote>
                   </div>
@@ -889,11 +924,9 @@
                     </div>
                     <blockquote class="card-feedback__text">
                       <p>
-                        Далеко-далеко за словесными, горами в стране гласных и согласных живут
-                        рыбные тексты. Дорогу, рекламных проектах! Обеспечивает буквенных, над мир
-                        составитель вершину вопроса злых ручеек реторический рыбными подзаголовок
-                        переулка образ текстов рыбного всемогущая вопрос выйти бросил на берегу
-                        lorem? Запятых, от всех.
+                        Приобрели в данном магазине Тату- машинку CHEYENNE. Заказ пришел быстро, по
+                        качеству товара и упаковки нареканий нет. Все отлично. Спасибо Вам будем
+                        заказывать ещё! Рекомендую магазин!
                       </p>
                     </blockquote>
                   </div>
